force-app/main/default/objects/Position__c/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <description>Contact number</description>
    <inlineHelpText>please contact to this number</inlineHelpText>
    <label>contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>