force-app/main/default/objects/Position__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>date</description>
    <inlineHelpText>please enter the date</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>