force-app/main/default/objects/Position__c/fields/Hiring_manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>relation ship</description>
    <label>Hiring Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>