force-app/main/default/objects/Position__c/fields/HR_email__c.field-meta.xml
<CustomField>
    <fullName>HR_email__c</fullName>
    <label>HR email</label>
    <type>Email</type>
</CustomField>