force-app/main/default/objects/Position__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>position object layout ..</description>
    <inlineHelpText>add your posoiotn</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Position</fullName>
                <default>true</default>
                <label>New Position</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Open-Approved</fullName>
            </value>
            <value>
                <fullName>Closed-Filled</fullName>
            </value>
            <value>
                <fullName>Closed-Not Approed</fullName>
            </value>
            <value>
                <fullName>Closed- Canceld</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>